# 5_corsework

./: DBManager.py  README.md  config.py  database.ini  main.py  pyproject.toml  utils.py
